--- a/test.html
+++ b/test.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
+	<style>
+		.header{
+			background-color: black;
+			border-width: 20px;
+			border-style: double;
+			border-color: white;
+			font-weight: bold;
+			font-size: 30px;
+			color:white;
+		}
+		.content{
+			float:left;
+			background-color:lightcyan;
+		}
+		.footer{
+			background-color: black;
+			border-width: 20px;
+			border-style: solid;
+			border-color: white;
+		}
+	</style>
 	<head>
 		<meta charset="utf-8">
 		<title>TestPage</title>
 	</head>
 	<body>
-		Hello World?
+		<div class="header">
+			<p>Jamie Cho's Web Page!</p>
+		</div>
+		<div class="content">
+			Hello World?
+		</div>
+		<div class="footer">
+			FOOT!
+		</div>
 	</body>
 </html>
