--- a/test.html
+++ b/test.html
@@ -9,10 +9,13 @@
 			font-weight: bold;
 			font-size: 30px;
 			color:white;
+			padding: 20px;
 		}
 		.content{
 			float:left;
 			background-color:lightcyan;
+			height: 10%;
+			width: 20%;
 		}
 		.footer{
 			background-color: black;
