--- a/test.html
+++ b/test.html
@@ -30,13 +30,24 @@
 	</head>
 	<body>
 		<div class="header">
+			<img height="80%" src="duv.png">
 			<p>Jamie Cho's Web Page!</p>
 		</div>
 		<div class="content">
-			Hello World?
+			<h1>Noteworthy Projects:</h1>
+			<ul>
+				<li><a href = 'https://github.com/yycho0108/OlinSchedulerPy'>Olin Scheduler(Python3/Qt4)</a></li>
+				<li><a href = 'https://github.com/yycho0108/FireBubble'>FireBubble(C++,WINAPI)</a></li>
+				<li><a href = 'https://github.com/yycho0108/PuzzleMaker'>Puzzle Maker(C++,WINAPI)</a></li>
+				<li><a href = 'https://github.com/yycho0108/ASCII_ART'>ASCII Art Generator(C++,WINAPI)</a></li>
+				<li><a href = 'https://github.com/yycho0108/OpenGL_Framework'>OpenGL Framework(C++,OpenGL)</a></li>
+			</ul>
 		</div>
 		<div class="footer">
-			FOOT!
+			<ul>
+				<li>Current Address : 1000 Olin Way, Needham, MA</li>
+				<li>Telephone : (+1) 213-220-3492</li>
+			</ul>
 		</div>
 	</body>
 </html>
