--- a/test.html
+++ b/test.html
@@ -1,61 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-	<style>
-		body{
-			width:100%;
-			height: 100%;
-		}
-		div.header{
-			background-color: black;
-			border-width: 20px;
-			border-style: double;
-			border-color: white;
-			font-weight: bold;
-			font-size: 30px;
-			color:white;
-			padding: 20px;
-		}
-		div.container{
-			display : table-row;
-			width : 100%;
-		}
-		div.nav{
-			display : table-cell;
-			background-color:lightcyan;
-			height: 100%;
-			width : 20%;
-		}
-		div.preview{
-			display : table-cell;
-			background-color:white;
-			border-color: black;
-			border-width: thin;
-			height : 100%;
-			width : 80%;
-		}
-		div.footer{
-			background-color: black;
-			border-width: 20px;
-			border-style: solid;
-			border-color: white;
-			bottom: 0px;
-		}
-		#prev{
-			height : 100%;
-			width : 100%;
-		}
-	</style>
 	<head>
 		<meta charset="utf-8">
 		<title>TestPage</title>
+		<link rel="stylesheet" href="styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	</head>
+
 	<body>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				$("a").hover(function(){ // mouseIn
-					$("#prev").attr({'src': $(this).attr('href')}); // display preview
+					$("#prev").attr({'src': $(this).attr('prev')}); // display preview
 				},function(){ //mouseOut
 					$("#prev").attr({'src':"about:blank"});
 				})
@@ -64,21 +20,33 @@
 		<div class="header">
 			<p>Jamie Cho's Web Page!</p>
 		</div>
-		<div class="container">
-			<div class="nav">
-				<h1>Noteworthy Projects:</h1>
-				<ul>
-					<li><a href = 'https://github.com/yycho0108/OlinSchedulerPy'>Olin Scheduler(Python3/Qt4)</a></li>
-					<li><a href = 'https://github.com/yycho0108/FireBubble'>FireBubble(C++,WINAPI)</a></li>
-					<li><a href = 'https://github.com/yycho0108/PuzzleMaker'>Puzzle Maker(C++,WINAPI)</a></li>
-					<li><a href = 'https://github.com/yycho0108/ASCII_ART'>ASCII Art Generator(C++,WINAPI)</a></li>
-					<li><a href = 'https://github.com/yycho0108/OpenGL_Framework'>OpenGL Framework(C++,OpenGL)</a></li>
-				</ul>
+		<div class="wrapper">
+			<div class="container">
+				<div class="nav">
+					<h3>Noteworthy Projects:</h3>
+					<dl>
+						<dt><a href = 'https://github.com/yycho0108/OlinSchedulerPy' prev = 'https://raw.githubusercontent.com/yycho0108/OlinSchedulerPy/master/img/schedule.png'>Olin Scheduler</a></dt>
+						<dd>(Python3/Qt4) : Graphic UI, Web Scraping</dd>
+						<dd>Software for Visualization of Olin Courses.</dd>
+						<dt><a href = 'https://github.com/yycho0108/FireBubble' prev="">FireBubble</a></dt>
+						<dd>(C++,WINAPI) : Game, Color Detection, Customization</dd>
+						<dd>Game that extends on the arcade game 'PuzzleBobble'</dd>
+						<dt><a href = 'https://github.com/yycho0108/PuzzleMaker' prev="">Puzzle Maker</a></dt>
+						<dd>(C++,WINAPI) : Image Analysis, Interaction</dd>
+						<dd>Software that creates a puzzle from an image</dd>
+						<dt><a href = 'https://github.com/yycho0108/ASCII_ART' prev="">ASCII Art Generator</a></dt>
+						<dd>(C++,WINAPI) : Image Analysis, Customization</dd>
+						<dd>Software that creates an ASCII-ART from an image</dd>
+						<dt><a href = 'https://github.com/yycho0108/OpenGL_Framework' prev="">OpenGL Framework</a></dt>
+						<dd>(C++,OpenGL) : Framework, OOP, Library</dd>
+						<dd>Simple framework that eases the use of OpenGL through abstraction</dd>
+						<dd></dd>
+					</dl>
+				</div>
+				<div class="preview">
+					<img id = "prev" src="" width="100%" height="100%"/>
+				</div>
 			</div>
-			<div class="preview">
-				<iframe id="prev" src="about:blank"></iframe>
-			</div>
-
 		</div>
 		<div class="footer">
 			<ul>
