--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 					</ul>
 				</li>
 				<li class="bannerItem"><a href="bio.html">Biography</a></li>
+				<li class="bannerItem"><a href="academics.html">Academics</a></li>
 				<li class="bannerItem"><a href="art.html">Art</a></li>
 				<li class="bannerItem"><a href="music.html">Music</a></li>
 				<li class="bannerItem"><a href="aside.html">Aside</a></li>
