--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<li class="bannerItem"><a href="academics.html">Academics</a></li>
 				<li class="bannerItem"><a href="art.html">Art</a></li>
 				<li class="bannerItem"><a href="music.html">Music</a></li>
-				<li class="bannerItem"><a href="aside.html">Aside</a></li>
+				<li class="bannerItem"><a href="projects.html">Projects</a></li>
 			</ul>
 		</div>
 		<div class="content">
