Added Images & Descriptions for Projects

--- a/academics.html
+++ b/academics.html
@@ -93,7 +93,9 @@
                     </video>
                 </div>
                 <div class="Explain">
-                    Stuff
+                    <p>Interpolated triangulation based on four sonar sensors, filtered around clap frequency(20 kHz) to localize
+                        sound source. Arduino reports preprocessed data from sensors, and controls Servo; Computation on the main
+                        PC with SymPy; UI design and visualization with PyQt4</p>
                 </div>
             </div>
         </ul>
