--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/FishTags.jpg">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/FishTag'>FishTag </a>
@@ -79,7 +79,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/Gaussian.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108'>MachineLearning </a>
@@ -87,6 +87,7 @@
             <div class="Description">
                 <p>Passionate Pursuit for Machine Learning and A.I.</p>
                 <a href="https://github.com/yycho0108/U_ML">Udacity Nanodegree Program</a>;<br/>
+                <a href="https://github.com/yycho0108/GaussianNaiveBayes">Gaussian Naive Bayes Classifier;</a><br/>
                 <a href="https://github.com/yycho0108/QLearningFramework_2">Tic-Tac-Toe A.I.</a>;<br/>
                 <a href="https://github.com/yycho0108/DigitParser">Digit Parser</a>;
             </div>
@@ -97,7 +98,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/OlinScheduler.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/OlinSchedulerPy'>Olin Scheduler </a>
@@ -113,10 +114,10 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/Orchestrator.png">
 
                 <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/FishTag'>Orchestrator </a>
+                <a href='https://github.com/yycho0108/Orchestrator'>Orchestrator </a>
             </div>
             <div class="Description">
                 <p>Utility Software, Algorithms</p>
@@ -131,7 +132,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img  src="Image/default-placeholder.png">
+                <img  src="Image/FireBubble.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/FireBubble'>FireBubble</a>
@@ -148,7 +149,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/ASCII_ART.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/ASCII_ART'>ASCII-Art Generator</a>
@@ -182,7 +183,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="Image/OpenGLFramework.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/OpenGL_Framework'>OpenGL Framework</a>
