Added ORS GUI Picture

--- a/projects.html
+++ b/projects.html
@@ -114,6 +114,23 @@
 
         <div class="Project">
             <div class="Intro">
+                <img src="Image/ORS.png">
+
+                <div class="Divider"></div>
+                <a href='https://github.com/olin-robotic-sailing/ors-git-repo'>Olin Robotic Sailing</a>
+            </div>
+            <div class="Description">
+                <p>Making an Autonomous Sailboat</p>
+                <p>GUI Development, Soft Limit-Switch Implementation</p>
+                <a href="http://www.olinroboticsailing.com/">Website</a>
+            </div>
+            <div class="Tag">
+                <p>ROS | PyQt4 | Python</p>
+            </div>
+        </div>
+
+        <div class="Project">
+            <div class="Intro">
                 <img src="Image/Orchestrator.png">
 
                 <div class="Divider"></div>
