moving files around

--- a/academics.html
+++ b/academics.html
@@ -70,7 +70,7 @@
             <li> Mechanics : Kinetic Pendulum<br></li>
             <div class="Descriptor">
                 <div class="Visual">
-                    <img src="Image/kPendulum.jpg" width="100%" height="100%">
+                    <img src="images/kPendulum.jpg" width="100%" height="100%">
                 </div>
                 <div class="Explain">
                     An analysis on the perpetual-motion machine with Lagrangian Mechanics, using MATLAB and Mathematica.
@@ -89,7 +89,7 @@
                 <div class="Visual">
                     <video width="100%" height="100%">
                         Your Browser Does Not Support The Video Tag.
-                        <source src="Video/AudioLocator.mp4" type="video/mp4">
+                        <source src="videos/AudioLocator.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="Explain">
@@ -112,7 +112,7 @@
                 <div class="Visual">
                     <video width="100%" height="100%">
                         Your Browser Does Not Support The Video Tag.
-                        <source src="Video/SharkAnimation.mp4" type="video/mp4">
+                        <source src="videos/SharkAnimation.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="Explain">
