--- a/music.html
+++ b/music.html
@@ -7,37 +7,37 @@
 <body>
 <p>Scenic.mp3</p>
 <audio controls>
-    <source src="Audio/Scenic.mp3" type="audio/mp3">
+    <source src="audios/Scenic.mp3" type="audio/mp3">
 </audio>
 
 <p>Sail.mp3</p>
 <audio controls>
-    <source src="Audio/Sail.mp3" type="audio/mp3">
+    <source src="audios/Sail.mp3" type="audio/mp3">
 </audio>
 
 <p>A Day.mp3</p>
 <audio controls>
-    <source src="Audio/A%20Day.mp3" type="audio/mp3">
+    <source src="audios/A%20Day.mp3" type="audio/mp3">
 </audio>
 
 <p>Surmount.mp3</p>
 <audio controls>
-    <source src="Audio/Surmount.mp3" type="audio/mp3">
+    <source src="audios/Surmount.mp3" type="audio/mp3">
 </audio>
 
 <p>Labyrinth.mp3</p>
 <audio controls>
-    <source src="Audio/Labyrinth.mp3" type="audio/mp3">
+    <source src="audios/Labyrinth.mp3" type="audio/mp3">
 </audio>
 
 <p>Loss.mp3</p>
 <audio controls>
-    <source src="Audio/Loss.mp3" type="audio/mp3">
+    <source src="audios/Loss.mp3" type="audio/mp3">
 </audio>
 
 <p>Sigh.mp3</p>
 <audio controls>
-    <source src="Audio/Sigh.mp3" type="audio/mp3">
+    <source src="audios/Sigh.mp3" type="audio/mp3">
 </audio>
 
 </body>
