--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<title>Jamie Cho</title>
 		<link rel="stylesheet" href="styles.css">
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
-		<script src="jquery-1.11.3.js"></script> <!-- for development -->
-		<script src="three.min.js"></script>
-		<script src="STLLoader.js"></script>
-		<script src="animateCube.js"></script>
+		<script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
+		<script src="javascripts/three.min.js"></script>
+		<script src="javascripts/STLLoader.js"></script>
+		<script src="javascripts/animateCube.js"></script>
 	</head>
 
 	<body>
@@ -34,7 +34,6 @@
 		<div class="header">
 			<table width="100%">
 				<tr>
-					<!--<td width="10%"> <img src = "Image/duv.png" style = "height: 30%;width: auto"></td>-->
 					<td style = "width: 10%; height : 100%"><div id="profile" style="width: 100%;height: 100%"></div></td>
 					<td style = "width: 40%; height : 100%"><h4 style = "margin-left: 5%">Jamie Cho's Web Page!</h4></td>
 					<!--<td width="50%" style="background-color: darkturquoise"></td>-->
