--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="Project">
             <div class="Intro">
-                <img src="Image/FishTags.jpg">
+                <img src="images/FishTags.jpg">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/FishTag'>FishTag </a>
@@ -79,7 +79,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/Gaussian.png">
+                <img src="images/Gaussian.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108'>MachineLearning </a>
@@ -98,7 +98,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/OlinScheduler.png">
+                <img src="images/OlinScheduler.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/OlinSchedulerPy'>Olin Scheduler </a>
@@ -114,7 +114,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/ORS.png">
+                <img src="images/ORS.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/olin-robotic-sailing/ors-git-repo'>Olin Robotic Sailing</a>
@@ -131,7 +131,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/Orchestrator.png">
+                <img src="images/Orchestrator.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/Orchestrator'>Orchestrator </a>
@@ -149,7 +149,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img  src="Image/FireBubble.png">
+                <img  src="images/FireBubble.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/FireBubble'>FireBubble</a>
@@ -166,13 +166,13 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/ASCII_ART.png">
+                <img src="images/ASCII_ART.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/ASCII_ART'>ASCII-Art Generator</a>
             </div>
             <div class="Description">
-                <p>Image Analysis, Customization</p>
+                <p>images Analysis, Customization</p>
 
                 <p>Software that creates an ASCII-ART from an image</p>
             </div>
@@ -183,13 +183,13 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/default-placeholder.png">
+                <img src="images/default-placeholder.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/PuzzleMaker'>Puzzle Maker</a>
             </div>
             <div class="Description">
-                <p>Image Analysis, Interaction</p>
+                <p>images Analysis, Interaction</p>
                 <p>Software that creates a puzzle from an image</p>
             </div>
             <div class="Tag">
@@ -200,7 +200,7 @@
 
         <div class="Project">
             <div class="Intro">
-                <img src="Image/OpenGLFramework.png">
+                <img src="images/OpenGLFramework.png">
 
                 <div class="Divider"></div>
                 <a href='https://github.com/yycho0108/OpenGL_Framework'>OpenGL Framework</a>
