--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Jamie Cho</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="stylesheets/styles.css">
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 		<script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
 		<script src="javascripts/three.min.js"></script>
