--- a/projects.html
+++ b/projects.html
@@ -2,57 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/projects.css">
     <script src="jquery-1.11.3.js"></script>
-    <style>
-        body {
-            font-family: monospace;
-        }
-
-        div.Project {
-            display: inline-block;
-            width: 300px;
-            height: 300px;
-            margin: 20px;
-            padding: 20px;
-            border: 5px brown solid;
-            background-color: aliceblue;
-        }
-
-        div.Divider {
-            width: 100%;
-            height: 1px;
-        }
-
-        div.Intro {
-            float: left;
-            width: 50%;
-            height: 90%;
-            text-align: center;
-            clear: left;
-        }
-        div.Intro img{
-            width: 100%;
-            height: 80%;
-        }
-        div.Intro a {
-            font-size: large;
-            text-decoration: none;
-        }
-
-        div.Description {
-            margin-left: 20px;
-            float: left;
-            width: 40%;
-            height: 90%;
-        }
-        div.Tag{
-            color: grey;
-            float: right;
-            margin-bottom: 10px;
-        }
-    </style>
-    <title></title>
+    <title>Projects</title>
 </head>
 <body>
 <div class="wrapper">
