--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>TestPage</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="stylesheets/styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	</head>
 
