--- a/index.html
+++ b/index.html
@@ -1,71 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Jamie Cho</title>
-		<link rel="stylesheet" href="stylesheets/styles.css">
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
-		<script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
-		<script src="javascripts/three.min.js"></script>
-		<script src="javascripts/STLLoader.js"></script>
-		<script src="javascripts/animateCube.js"></script>
-	</head>
-
-	<body>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				$(".dropdown").hide();
-				/*$("a").hover(function(){ // mouseIn
-					$(this).animate({fontSize:'120%'});
-					$("#prev").attr({'src': $(this).attr('prev')}); // display preview
-				},function(){ //mouseOut
-					$(this).animate({fontSize:'100%'});
-					$("#prev").attr({'src':"about:blank"});
-				});*/
-				$(".bannerItem").hover(function(){
-					$(this).children(".dropdown").slideDown();
-				},function(){
-					$(this).children(".dropdown").slideUp();
-				});
-				initContext(); //for animating cube
-				animate();
-			})
-		</script>
-		<div class="header">
-			<table width="100%">
-				<tr>
-					<td style = "width: 10%; height : 100%"><div id="profile" style="width: 100%;height: 100%"></div></td>
-					<td style = "width: 40%; height : 100%"><h4 style = "margin-left: 5%">Jamie Cho's Web Page!</h4></td>
-					<!--<td width="50%" style="background-color: darkturquoise"></td>-->
-				</tr>
-			</table>
-		</div>
-		<div class="banner">
-			<ul class="banner">
-				<li class="bannerItem">
-					<a href="index.html">Index</a>
-					<ul class="dropdown">
-						<li style="text-align: center;">HI</li>
-						<li style="text-align: center;">BI</li>
-						<li style="text-align: center;">KI</li>
-					</ul>
-				</li>
-				<li class="bannerItem"><a href="bio.html">Biography</a></li>
-				<li class="bannerItem"><a href="academics.html">Academics</a></li>
-				<li class="bannerItem"><a href="art.html">Art</a></li>
-				<li class="bannerItem"><a href="music.html">Music</a></li>
-				<li class="bannerItem"><a href="projects.html">Projects</a></li>
-			</ul>
-		</div>
-		<div class="content">
-			<p>[Content To Be Added];</p>
-			</div>
-		<div class="footer">
-			<ul>
-				<li><a href="https://github.com/yycho0108">Github Page</a></li>
-				<li>Current Address : 1000 Olin Way, Needham, MA</li>
-				<li>Telephone : (+1) 213-220-3492</li>
-			</ul>
-		</div>
-	</body>
-</html>
+---
+title : index
+layout : default
+---
