--- a/projects.html
+++ b/projects.html
@@ -16,12 +16,13 @@ title : projects
         Projects
     </div>
     <div class="container">
+
         <div class="Project">
             <div class="Intro">
                 <img src="images/FishTags.jpg">
 
                 <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/FishTag'>FishTag </a>
+                <a href='https://github.com/BluetoothFishTagging'>RFID-Enabled Fish Tracking </a>
             </div>
             <div class="Description">
                 <p>Mobile App Development to facilitate reporting fish-tags for Marine-Biologists</p>
@@ -29,7 +30,7 @@ title : projects
                 <p>Extensive exploration of modern technologies such as RFID and bluetooth.</p>
             </div>
             <div class="Tag">
-                <p>Android | Express</p>
+                <p>Android | Express | MySQL | AWS</p>
             </div>
         </div>
 
@@ -48,7 +49,7 @@ title : projects
                 <a href="https://github.com/yycho0108/DigitParser">Digit Parser</a>;
             </div>
             <div class="Tag">
-                <p>C++ | Python | MATLAB</p>
+                <p>C++ | Python | MATLAB </p>
             </div>
         </div>
 
