--- a/academics.html
+++ b/academics.html
@@ -1,134 +1,73 @@
 ---
 title: Academics
+layout: academics
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <style>
-
-        div.ClassBox {
-            display: inline-block;
-            width: 90%;
-            height: 300px;
-            margin: 10px;
-            padding: 20px;
-            border: 3px solid #73AD21;
-        }
-
-        div.GroupBox {
-            border-width: thick;
-            border-color: black;
-        }
-
-        div.Descriptor {
-            display : inline-block;
-            float: top;
-            height: 100px;
-            width: 80%;
-        }
-
-        div.Visual {
-            display: inline-block;
-            float: left;
-            width: 150px;
-            height: 200px;
-        }
-
-        div.Explain {
-            float: left;
-            width: 60%;
-            height: 100%;
-        }
-
-        div.divide {
-            float: none;
-            width: 100%;
-            height: 1px;
-        }
-    </style>
-    <script src="jquery-1.11.3.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("video").hover(function () {
-                this.play();
-            }, function () {
-                this.pause();
-            });
-        })
-    </script>
-    <title>Academics</title>
-</head>
-<body>
 <div class="GroupBox">
-    <h2>FA2015</h2>
+	<h2>FA2015</h2>
 
-    <div class="ClassBox">
-        <h3>Modelling and Simulation</h3>
-        <ul>
-            <li>PharmacoKinetics : Caffeine</li>
-            A study on the decomposition of caffeine, in multiple doses, taken regularly over time.
-            <li>Thermodynamics : Solar-Power Cooker</li>
-            A study on the use of solar power as an alternative energy source to fuel meal-cooking in the Himalayas
-            <li> Mechanics : Kinetic Pendulum<br></li>
-            <div class="Descriptor">
-                <div class="Visual">
-                    <img src="images/kPendulum.jpg" width="100%" height="100%">
-                </div>
-                <div class="Explain">
-                    An analysis on the perpetual-motion machine with Lagrangian Mechanics, using MATLAB and Mathematica.
-                </div>
-            </div>
-        </ul>
-    </div>
+	<div class="ClassBox">
+		<h3>Modelling and Simulation</h3>
+		<ul>
+			<li>PharmacoKinetics : Caffeine</li>
+			A study on the decomposition of caffeine, in multiple doses, taken regularly over time.
+			<li>Thermodynamics : Solar-Power Cooker</li>
+			A study on the use of solar power as an alternative energy source to fuel meal-cooking in the Himalayas
+			<li> Mechanics : Kinetic Pendulum<br></li>
+			<div class="Descriptor">
+				<div class="Visual">
+					<img src="images/kPendulum.jpg" width="100%" height="100%">
+				</div>
+				<div class="Explain">
+					An analysis on the perpetual-motion machine with Lagrangian Mechanics, using MATLAB and Mathematica.
+				</div>
+			</div>
+		</ul>
+	</div>
 
 
-    <div class="divide"></div>
-    <div class="ClassBox">
-        <h3>Introduction to Sensors, Instruments, and Measurement</h3>
-        <ul>
-            <li>Audio Localization</li>
-            <div class="Descriptor">
-                <div class="Visual">
-                    <video width="100%" height="100%">
-                        Your Browser Does Not Support The Video Tag.
-                        <source src="videos/AudioLocator.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="Explain">
-                    <p>Interpolated triangulation based on four sonar sensors, filtered around clap frequency(20 kHz) to localize
-                        sound source. Arduino reports preprocessed data from sensors, and controls Servo; Computation on the main
-                        PC with SymPy; UI design and visualization with PyQt4</p>
-                </div>
-            </div>
-        </ul>
+	<div class="divide"></div>
+	<div class="ClassBox">
+		<h3>Introduction to Sensors, Instruments, and Measurement</h3>
+		<ul>
+			<li>Audio Localization</li>
+			<div class="Descriptor">
+				<div class="Visual">
+					<video width="100%" height="100%">
+						Your Browser Does Not Support The Video Tag.
+						<source src="videos/AudioLocator.mp4" type="video/mp4">
+					</video>
+				</div>
+				<div class="Explain">
+					<p>Interpolated triangulation based on four sonar sensors, filtered around clap frequency(20 kHz) to localize
+					sound source. Arduino reports preprocessed data from sensors, and controls Servo; Computation on the main
+					PC with SymPy; UI design and visualization with PyQt4</p>
+				</div>
+			</div>
+		</ul>
 
-    </div>
+	</div>
 
-    <div class="divide"></div>
-    <div class="ClassBox">
-        <h3>Design Nature</h3>
-        <ul>
-            <li> Hopper Project</li>
-            <li> Thresher-Shark Play Experience</li>
-            <div class="Descriptor">
-                <div class="Visual">
-                    <video width="100%" height="100%">
-                        Your Browser Does Not Support The Video Tag.
-                        <source src="videos/SharkAnimation.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="Explain">
-                    An animated depiction of the play experience.
-                </div>
-            </div>
-        </ul>
-    </div>
+	<div class="divide"></div>
+	<div class="ClassBox">
+		<h3>Design Nature</h3>
+		<ul>
+			<li> Hopper Project</li>
+			<li> Thresher-Shark Play Experience</li>
+			<div class="Descriptor">
+				<div class="Visual">
+					<video width="100%" height="100%">
+						Your Browser Does Not Support The Video Tag.
+						<source src="videos/SharkAnimation.mp4" type="video/mp4">
+					</video>
+				</div>
+				<div class="Explain">
+					An animated depiction of the play experience.
+				</div>
+			</div>
+		</ul>
+	</div>
 
 </div>
 
 
 <h2>SP2016</h2>
-
-</body>
-</html>
