--- a/music.html
+++ b/music.html
@@ -1,47 +1,40 @@
 ---
 title : Music
+layout : default
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Music</title>
-</head>
-<body>
-<p>Scenic.mp3</p>
-<audio controls>
-    <source src="audios/Scenic.mp3" type="audio/mp3">
-</audio>
+<div class="Music">
+	<p>Scenic.mp3</p>
+	<audio controls>
+		<source src="audios/Scenic.mp3" type="audio/mp3">
+	</audio>
 
-<p>Sail.mp3</p>
-<audio controls>
-    <source src="audios/Sail.mp3" type="audio/mp3">
-</audio>
+	<p>Sail.mp3</p>
+	<audio controls>
+		<source src="audios/Sail.mp3" type="audio/mp3">
+	</audio>
 
-<p>A Day.mp3</p>
-<audio controls>
-    <source src="audios/A%20Day.mp3" type="audio/mp3">
-</audio>
+	<p>A Day.mp3</p>
+	<audio controls>
+		<source src="audios/A%20Day.mp3" type="audio/mp3">
+	</audio>
 
-<p>Surmount.mp3</p>
-<audio controls>
-    <source src="audios/Surmount.mp3" type="audio/mp3">
-</audio>
+	<p>Surmount.mp3</p>
+	<audio controls>
+		<source src="audios/Surmount.mp3" type="audio/mp3">
+	</audio>
 
-<p>Labyrinth.mp3</p>
-<audio controls>
-    <source src="audios/Labyrinth.mp3" type="audio/mp3">
-</audio>
+	<p>Labyrinth.mp3</p>
+	<audio controls>
+		<source src="audios/Labyrinth.mp3" type="audio/mp3">
+	</audio>
 
-<p>Loss.mp3</p>
-<audio controls>
-    <source src="audios/Loss.mp3" type="audio/mp3">
-</audio>
+	<p>Loss.mp3</p>
+	<audio controls>
+		<source src="audios/Loss.mp3" type="audio/mp3">
+	</audio>
 
-<p>Sigh.mp3</p>
-<audio controls>
-    <source src="audios/Sigh.mp3" type="audio/mp3">
-</audio>
-
-</body>
-</html>
+	<p>Sigh.mp3</p>
+	<audio controls>
+		<source src="audios/Sigh.mp3" type="audio/mp3">
+	</audio>
+</div>
