--- a/projects.html
+++ b/projects.html
@@ -1,178 +1,96 @@
 ---
 title : Projects
+layout : projects
+projects:
+ - title: RFID-Enabled Fish Tracking
+   link : https://github.com/BluetoothFishTagging
+   image: images/FishTags.jpg
+   description: |
+      <p>Mobile App Development to facilitate reporting fish-tags for Marine-Biologists</p>
+      <p>Extensive exploration of modern technologies such as RFID and bluetooth.</p>
+   tag: Android | Express | MySQL | AWS
+
+ - title: Udacity Machine-Learning Nanodegree
+   image: images/Gaussian.png
+   description: |
+      <p>Passionate Pursuit for Machine Learning and A.I.</p>
+      <a href="https://github.com/yycho0108/U_ML">Udacity Nanodegree Program</a>;<br/>
+      <a href="https://github.com/yycho0108/GaussianNaiveBayes">Gaussian Naive Bayes Classifier;</a><br/>
+      <a href="https://github.com/yycho0108/QLearningFramework_2">Tic-Tac-Toe A.I.</a>;<br/>
+      <a href="https://github.com/yycho0108/DigitParser">Digit Parser</a>;
+   tag: C++ | Python | MATLAB
+
+ - title: Olin Scheduler
+   link: 'https://github.com/yycho0108/OlinSchedulerPy'
+   image: images/OlinScheduler.png
+   description: |
+      <p>Graphic UI, Web Scraping</p>
+      <p>Software for Visualization of Olin Courses.</p>
+   tag: PyQt4
+
+ - title: Olin Robotic Sailing
+   link: https://github.com/olin-robotic-sailing/ors-git-repo
+   image: images/ORS.png
+   description: |
+      <p>Making an Autonomous Sailboat</p>
+      <p>GUI Development, Soft Limit-Switch Implementation</p>
+      <a href="http://www.olinroboticsailing.com/">Website</a>
+   tag: ROS | PyQt4 | Python
+
+ - title: Orchestrator
+   link: 'https://github.com/yycho0108/Orchestrator'
+   image: "images/Orchestrator.png"
+   description: |
+      <p>Utility Software, Algorithms</p>
+      <p>Application of the <a href="https://en.wikipedia.org/wiki/Travelling_salesman_problem"> TSP </a> to scheduling effective rehearsals</p>
+   tag: C++ | Qt
+
+ - title: FireBubble
+   link: 'https://github.com/yycho0108/FireBubble'
+   image: "images/FireBubble.png"
+   description: |
+      <p>Game Development, ColorSpace, Customization</p>
+      <p>Extending on the arcade game 'PuzzleBobble'</p>
+   tag: C++ | WINAPI
+
+ - title: ASCII-ART
+   link: 'https://github.com/yycho0108/ASCII_ART'
+   image: "images/ASCII_ART.png"
+   description: |
+      <p>image Analysis, Customization</p>
+      <p>Software that creates an ASCII-ART from an image</p>
+   tag: C++ | WINAPI
+
+ - title: Puzzle Maker
+   link: 'https://github.com/yycho0108/PuzzleMaker'
+   image: images/default-placeholder.png
+   description: |
+      <p>image Analysis, Interaction</p>
+      <p>Software that creates a puzzle from an image</p>
+   tag: C++ | WINAPI
+
+ - title: OpenGL Framework
+   link: 'https://github.com/yycho0108/OpenGL_Framework'
+   image: "images/OpenGLFramework.png"
+   description: |
+      <p>Framework, OOP, Library</p>
+      <p>Simple framework that eases the use of OpenGL through abstraction</p>
+   tag: C++ | OpenGL
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/projects.css">
-    <script src="jquery-1.11.3.js"></script>
-    <title>Projects</title>
-</head>
-<body>
-<div class="wrapper">
-    <div class="header">
-        Projects
-    </div>
-    <div class="container">
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/FishTags.jpg">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/BluetoothFishTagging'>RFID-Enabled Fish Tracking </a>
-            </div>
-            <div class="Description">
-                <p>Mobile App Development to facilitate reporting fish-tags for Marine-Biologists</p>
-
-                <p>Extensive exploration of modern technologies such as RFID and bluetooth.</p>
-            </div>
-            <div class="Tag">
-                <p>Android | Express | MySQL | AWS</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/Gaussian.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108'>MachineLearning </a>
-            </div>
-            <div class="Description">
-                <p>Passionate Pursuit for Machine Learning and A.I.</p>
-                <a href="https://github.com/yycho0108/U_ML">Udacity Nanodegree Program</a>;<br/>
-                <a href="https://github.com/yycho0108/GaussianNaiveBayes">Gaussian Naive Bayes Classifier;</a><br/>
-                <a href="https://github.com/yycho0108/QLearningFramework_2">Tic-Tac-Toe A.I.</a>;<br/>
-                <a href="https://github.com/yycho0108/DigitParser">Digit Parser</a>;
-            </div>
-            <div class="Tag">
-                <p>C++ | Python | MATLAB </p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/OlinScheduler.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/OlinSchedulerPy'>Olin Scheduler </a>
-            </div>
-            <div class="Description">
-                <p>Graphic UI, Web Scraping</p>
-                <p>Software for Visualization of Olin Courses.</p>
-            </div>
-            <div class="Tag">
-                <p>PyQt4</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/ORS.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/olin-robotic-sailing/ors-git-repo'>Olin Robotic Sailing</a>
-            </div>
-            <div class="Description">
-                <p>Making an Autonomous Sailboat</p>
-                <p>GUI Development, Soft Limit-Switch Implementation</p>
-                <a href="http://www.olinroboticsailing.com/">Website</a>
-            </div>
-            <div class="Tag">
-                <p>ROS | PyQt4 | Python</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/Orchestrator.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/Orchestrator'>Orchestrator </a>
-            </div>
-            <div class="Description">
-                <p>Utility Software, Algorithms</p>
-
-                <p>Application of the <a href="https://en.wikipedia.org/wiki/Travelling_salesman_problem"> TSP </a> to
-                    scheduling effective rehearsals</p>
-            </div>
-            <div class="Tag">
-                <p>C++ | Qt</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img  src="images/FireBubble.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/FireBubble'>FireBubble</a>
-            </div>
-            <div class="Description">
-                <p>Game Development, ColorSpace, Customization</p>
-
-                <p>Extending on the arcade game 'PuzzleBobble'</p>
-            </div>
-            <div class="Tag">
-                <p>C++ | WINAPI</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/ASCII_ART.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/ASCII_ART'>ASCII-Art Generator</a>
-            </div>
-            <div class="Description">
-                <p>images Analysis, Customization</p>
-
-                <p>Software that creates an ASCII-ART from an image</p>
-            </div>
-            <div class="Tag">
-                <p>C++ | WINAPI</p>
-            </div>
-        </div>
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/default-placeholder.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/PuzzleMaker'>Puzzle Maker</a>
-            </div>
-            <div class="Description">
-                <p>images Analysis, Interaction</p>
-                <p>Software that creates a puzzle from an image</p>
-            </div>
-            <div class="Tag">
-                <p>C++ | WINAPI</p>
-            </div>
-        </div>
-
-
-        <div class="Project">
-            <div class="Intro">
-                <img src="images/OpenGLFramework.png">
-
-                <div class="Divider"></div>
-                <a href='https://github.com/yycho0108/OpenGL_Framework'>OpenGL Framework</a>
-            </div>
-            <div class="Description">
-                <p>Framework, OOP, Library</p>
-
-                <p>Simple framework that eases the use of OpenGL through abstraction</p>
-            </div>
-            <div class="Tag">
-                <p>C++ | OpenGL</p>
-            </div>
-        </div>
-
-    </div>
+<div class="container">
+   {% for project in page.projects %}
+   <div class="Project">
+      <div class="Intro">
+         <img src={{project.image}}>
+         <div class="Divider"></div>
+         <a href={{project.link}}>{{ project.title }}</a>
+      </div>
+      <div class="Description">
+         {{ project.description }}
+      </div>
+      <div class="Tag">
+         <p> {{ project.tag }} </p>
+      </div>
+   </div>
+   {% endfor %}
 </div>
-</body>
-</html>
