--- a/github.html
+++ b/github.html
@@ -2,20 +2,20 @@
 title : Github Projects
 layout : projects
 projects :
- - link: AudioLocalizer
+ - link: AudioLocator
    descr: Audio Localizer
  - link: Lin1_Project
    descr: 3D Reconstruction
  - link: DigitParser
    descr: Neural Network Digit Recognition
- - link: OlinScheduler
-   descr: Olin Scheduler
  - link: U_ML 
-   descr: Udacity Machine-Learning Nanodegree
+   descr: Udacity Machine-Learning Nanodegree Program
+ - link: OlinScheduler
+   descr: Olin Scheduler Application
  - link: Composer
-   descr: Visual Composition
+   descr: Visual Music Composition Application
  - link: Orchestrator
-   descr: Schedule Coordinator
+   descr: Rehearsal Schedule Coordination Application
 
 ---
 <div class="container">
