renamed audio localizer

--- a/github.html
+++ b/github.html
@@ -2,7 +2,7 @@
 title : Github Projects
 layout : projects
 projects :
- - link: AudioLocator
+ - link: AudioLocalizer
    descr: Audio Localizer
  - link: Lin1_Project
    descr: 3D Reconstruction
