--- a/research.html
+++ b/research.html
@@ -1,3 +1,9 @@
 ---
 title : Research
+layout : default
 ---
+
+<ul>
+	<li><a href="https://olinrobotics.github.io">Olin Robotics</a></li>
+	<li><a href="https://bluetoothfishtagging.github.io">RFID-enabled Fish Tracking</a></li>
+</ul>
