--- a/projects.html
+++ b/projects.html
@@ -77,20 +77,28 @@ projects:
       <p>Simple framework that eases the use of OpenGL through abstraction</p>
    tag: C++ | OpenGL
 ---
-<div class="container">
-   {% for project in page.projects %}
-   <div class="Project">
-      <div class="Intro">
-         <img src={{project.image}}>
-         <div class="Divider"></div>
-         <a href={{project.link}}>{{ project.title }}</a>
-      </div>
-      <div class="Description">
-         {{ project.description }}
-      </div>
-      <div class="Tag">
-         <p> {{ project.tag }} </p>
-      </div>
-   </div>
-   {% endfor %}
+<div class="slideshow-container">
+	{% for project in page.projects %}
+	<div class="mySlide fade Project">
+		<a href={{project.link}} style="float: left; margin: auto; width: 100%; text-align: center;"><h2>{{ project.title }}</h2></a>
+		<div class="Intro">
+			<img src={{project.image}}>
+			<div class="Divider"></div>
+		</div>
+		<div class="Description">
+			{{ project.description }}
+		</div>
+		<div class="Tag">
+			<p> {{ project.tag }} </p>
+		</div>
+	</div>
+	{% endfor %}
+	<a class="prev" onclick="showSlide(slideIndex-1)">&#10094;</a>
+	<a class="next" onclick="showSlide(slideIndex+1)">&#10095;</a>
+</div>
+
+<div style="text-align:center">
+	{% for project in page.projects %}
+	<span class="dot" onclick="showSlide({{ forloop.index0 }})"></span> 
+	{% endfor %}
 </div>
